--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,10 @@
     "start": "node dist/index.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "prisma:migrate:deploy": "prisma migrate deploy",
+    "prisma:studio": "prisma studio",
+    "postinstall": "prisma generate",
+    "railway:start": "prisma migrate deploy && node dist/index.js"
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
