--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "zustand": "^4.4.7",
     "i18next": "^23.7.6",
     "react-i18next": "^13.5.0",
-    "i18next-browser-languagedetector": "^7.2.0"
+    "i18next-browser-languagedetector": "^7.2.0",
+    "serve": "^14.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.45",
