fixed the postgres issue

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,5 @@
-# Database
-DATABASE_URL=file:./dev.db
-DATABASE_PROVIDER=sqlite
+# Database (PostgreSQL - use Railway or local Postgres)
+DATABASE_URL=postgresql://user:password@localhost:5432/the_newsletter
 
 # Server
 PORT=3000
