fixed various bugs around the platform

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,9 @@
-# Database (PostgreSQL - use Railway or local Postgres)
-DATABASE_URL=postgresql://user:password@localhost:5432/the_newsletter
+# Database
+# Local (SQLite): use with npm run dev
+# DATABASE_URL=file:./dev.db
+# Production / Railway (PostgreSQL): set in Railway dashboard
+# DATABASE_URL=postgresql://user:password@localhost:5432/the_newsletter
+DATABASE_URL=file:./dev.db
 
 # Server
 PORT=3000
