--- a/backend/package.json
+++ b/backend/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "prisma generate --schema=prisma/schema.sqlite.prisma && prisma db push --schema=prisma/schema.sqlite.prisma && tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "prisma:generate": "prisma generate",
+    "prisma:generate:local": "prisma generate --schema=prisma/schema.sqlite.prisma",
     "prisma:migrate": "prisma migrate dev",
     "prisma:migrate:deploy": "prisma migrate deploy",
-    "prisma:studio": "prisma studio",
+    "prisma:db:push:local": "prisma db push --schema=prisma/schema.sqlite.prisma",
+    "prisma:studio": "prisma studio --schema=prisma/schema.sqlite.prisma",
+    "prisma:studio:postgres": "prisma studio",
     "postinstall": "prisma generate",
     "railway:start": "prisma migrate deploy && node dist/index.js"
   },
