fixed the email, fixed the mobile ui

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,4 +19,4 @@ PERPLEXITY_API_KEY=your-perplexity-api-key
 
 # Email Service
 RESEND_API_KEY=your-resend-api-key
-FROM_EMAIL=noreply@yourdomain.com
+FROM_EMAIL=this-week@event-newsletter.com
